welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:9: error: not found: value setColorBrosse
	setColorBrosse(Color.YELLOW); leveBrosse();
        ^